# Gemini-desktop

./: .gitignore  LICENSE  index.html  package-lock.json  package.json
scripts/: make_icon.py  process_logo.py
src/: App.css  App.tsx  Help.tsx  ImageStudio.tsx  Settings.tsx  Spotlight.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: image_studio.rs  lib.rs
